* config/alpha/alpha.md (*setne_internal): Use match_operator         instead of working down from insn.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34268 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-30  Richard Henderson  <rth@cygnus.com>
+
+	* config/alpha/alpha.md (*setne_internal): Use match_operator
+	instead of working down from insn.
+
 2000-05-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* invoke.texi (-Wtraditional): Update WRT function macros.
