* call.c (joust): Fix handling of overloaded builtin operators.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34269 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-30  Mark Mitchell  <mark@codesourcery.com>
+
+	* call.c (joust): Fix handling of overloaded builtin operators.
+
 2000-05-30  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cp-tree.h (DECL_ANTICIPATED): New macro.
