diff of diff does not work well, so use expected test result files
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34270 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-30  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/tests/*:  Added expected result files for fixinc's make check
+
 2000-05-30  Richard Henderson  <rth@cygnus.com>
 
 	* config/alpha/alpha.md (*setne_internal): Use match_operator
