restore old algorighm for char_macro_*_fix routines
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34271 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,7 @@
 2000-05-30  Bruce Korb  <bkorb@gnu.org>
 
 	* fixinc/tests/*:  Added expected result files for fixinc's make check
+	* fixinc/fixfixes(char_macro_*_fix): Restore original algorithm
 
 2000-05-30  Richard Henderson  <rth@cygnus.com>
 
