--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-30  Richard Henderson  <rth@cygnus.com>
+
+	* bb-reorder.c (emit_jump_to_block_after): Protect use of HAVE_return.
+
 2000-05-30  Bruce Korb  <bkorb@gnu.org>
 
 	* fixinc/tests/*:  Added expected result files for fixinc's make check
