--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 30 22:25:57 2000  Alexandre Oliva  <aoliva@cygnus.com>
+
+	* optabs.c (prepare_float_lib_cmp): Protect *px and *py from
+	queue.
+
 2000-05-30  Michael Meissner  <meissner@redhat.com>
 
 	* dwarf2out.c (dwarf2out_frame_debug_expr): Ignore HIGH
