--- a/gcc/cp/ir.texi
+++ b/gcc/cp/ir.texi
@@ -1038,7 +1038,19 @@ returns, control is transferred directly to the caller, without
 returning to the thunk.  The first parameter to the thunk is always the
 @code{this} pointer; the thunk should add @code{THUNK_DELTA} to this
 value.  (The @code{THUNK_DELTA} is an @code{int}, not an
-@code{INTEGER_CST}.)  Then, the thunk should jump to the location given
+@code{INTEGER_CST}.)  
+
+Then, if @code{THUNK_VCALL_OFFSET} (also an @code{int}) is non-zero the
+adjusted @code{this} pointer must be adjusted again.  The complete
+calculation is given by the following pseudo-code:
+
+@example
+this += THUNK_DELTA
+if (THUNK_VCALL_OFFSET)
+  this += (*((ptrdiff_t **) this))[THUNK_VCALL_OFFSET]
+@end example
+
+Finally, the thunk should jump to the location given
 by @code{DECL_INITIAL}; this will always be an expression for the
 address of a function.
 
