--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Wed May 31 01:31:42 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* ifcvt.c (cond_exec_process_if_block): Do nothing if the last insn
+	in the block is more than just a simple conditional branch.
+	(noce_process_if_block): Similarly.
+
 Tue May 30 22:25:57 2000  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* optabs.c (prepare_float_lib_cmp): Protect *px and *py from
