* decl.c (grok_reference_init): Pass LOOKUP_ONLYCONVERTING.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34290 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-30  Jason Merrill  <jason@decepticon.cygnus.com>
+
+	* decl.c (grok_reference_init): Pass LOOKUP_ONLYCONVERTING.
+
 2000-05-30  Mark Mitchell  <mark@codesourcery.com>
 
 	* call.c (add_template_candidate_real): Handle member template
