--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed May 31 08:07:52 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* flow.c (propagate_block): If block has no successors, stores to
+	frame are dead if not used.
+
 2000-05-31  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* stmt (expand_end_case): Reorder conversion sequence for jump
