gcc: 	* configure.in (enable-nls): Enable if build == host, i.e. when 	not building a canadian cross compiler. 	(enable-maintainer-mode): Added for use with i18n. 	* aclocal.m4 (AM_GNU_GETTEXT): Only build catalogs that are a 	cross section of ALL_LINGUAS and LINGUAS. 	* configure: Rebuild.
gcc/po:
	* Makefile.in.in: Create compiled catalogs in objdir, not
	srcdir. Create gcc.pot and cat-tbl-id.c only in maintainer
	mode.
	* gcc.pot: Generated and checked in.
	* cat-tbl-id.c: Generated and checked in.
	* stamp-cat-id: Generated and checked in.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34303 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2000-05-31  Philipp Thomas  <pthomas@suse.de>
+
+	* configure.in (enable-nls): Enable if build == host, i.e. when 
+	not building a canadian cross compiler.
+	(enable-maintainer-mode): Added for use with i18n.
+	* aclocal.m4 (AM_GNU_GETTEXT): Only build catalogs that are a
+	cross section of ALL_LINGUAS and LINGUAS.
+	* configure: Rebuild.
+
 2000-05-31  Bruce Korb  <bkorb@gnu.org>
 
 	* fixinc/check.tpl: rework to use test result tree
