* invoke.texi: Remove documentation for -fguiding-decls.
	Remove guiding declaration support.
	* cp/cp-tree.h (flag_dump_translation_unit): Make it const.
	(flag_guiding_decls): Remove.
	* call.c (build_user_type_conversion_1): Remove support for
	guiding decls.
	(build_new_function_call): Likewise.
	(build_new_op): Likewise.
	(build_new_method_call): Likewise.
	* decl.c (start_function): Likewise.
	* friend.c (is_friend): Likewise.
	(do_friend): Likewise.
	* decl2.c ((flag_dump_translation_unit): Make it const.
	(flag_guiding_decls): Remove.
	(unsupported_options): New variable
	(compare_options): New function.
	(lang_decode_option): Use them.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34306 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-31  Mark Mitchell  <mark@codesourcery.com>
+
+	* invoke.texi: Remove documentation for -fguiding-decls.
+
 2000-05-31  Richard Henderson  <rth@cygnus.com>
 
 	* configure.in: Fix typo last change.
