* jump.c (jump_optimize_1): Revert 05-18 change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34307 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-31  Richard Henderson  <rth@cygnus.com>
+
+	* jump.c (jump_optimize_1): Revert 05-18 change.
+
 2000-05-31  Mark Mitchell  <mark@codesourcery.com>
 
 	* invoke.texi: Remove documentation for -fguiding-decls.
