* flow.c (propagate_block): Move initialization of mem_set_list ...         (init_propagate_block_info): ... here.  Also track blocks with         no successors; don't scan insns if ! PROP_SCAN_DEAD_CODE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34310 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2000-05-31  Richard Henderson  <rth@cygnus.com>
 
+	* flow.c (propagate_block): Move initialization of mem_set_list ...
+	(init_propagate_block_info): ... here.  Also track blocks with 
+	no successors; don't scan insns if ! PROP_SCAN_DEAD_CODE.
+
+2000-05-31  Richard Henderson  <rth@cygnus.com>
+
 	* jump.c (jump_optimize_1): Revert 05-18 change.
 
 2000-05-31  Mark Mitchell  <mark@codesourcery.com>
