2000-05-31  Bryce McKinlay  <bryce@albatross.co.nz>
	* gcj/cni.h: Include <string.h>.
	* defineclass.cc: Include <alloca.h>.
	* interpret.cc: Ditto.
	* gij.cc: Include <stdlib.h>.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34311 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2000-05-31  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* gcj/cni.h: Include <string.h>.
+	* defineclass.cc: Include <alloca.h>.
+	* interpret.cc: Ditto.
+	* gij.cc: Include <stdlib.h>.
+
 2000-05-30  Tom Tromey  <tromey@cygnus.com>
 
 	* include/name-finder.h: Include <sys/wait.h>.
