* ifcvt.c (cond_exec_process_insns): Don't ever ignore clobbers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34316 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-05-31  Richard Henderson  <rth@cygnus.com>
 
+	* ifcvt.c (cond_exec_process_insns): Don't ever ignore clobbers.
+
+2000-05-31  Richard Henderson  <rth@cygnus.com>
+
 	* flow.c (merge_blocks_nomove): Remove a barrier not following
 	a jump as well.
 
