* ifcvt.c (merge_if_block): Be prepared for JOIN to have no         remaining edges.         (find_if_block): Allow THEN with no outgoing edges.         * flow.c (merge_blocks_nomove): Remove a barrier not following         a jump as well.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34317 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -4,6 +4,9 @@
 
 2000-05-31  Richard Henderson  <rth@cygnus.com>
 
+	* ifcvt.c (merge_if_block): Be prepared for JOIN to have no 
+	remaining edges.
+	(find_if_block): Allow THEN with no outgoing edges.
 	* flow.c (merge_blocks_nomove): Remove a barrier not following
 	a jump as well.
 
