* config/ia64/ia64-protos.h (ia64_expand_prediction): Remove.         * config/ia64/ia64.c (ia64_expand_prediction): Move code ...         (ia64_print_operand) [+]: ... here.  Use current_output_insn.         * config/ia64/ia64.h (PRINT_OPERAND_PUNCT_VALID_P): New.         * config/ia64/ia64.md (all branch/call patterns): Use %+.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34318 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -2162,7 +2162,7 @@
 		      (label_ref (match_operand 2 "" ""))
 		      (pc)))]
   ""
-  "* return ia64_expand_prediction (insn, \"(%%J0) br.cond.%s %%l2\");"
+  "(%J0) br.cond%+ %l2"
   [(set_attr "type" "B")
    (set_attr "predicable" "no")])
 
@@ -2174,7 +2174,7 @@
 		      (pc)
 		      (label_ref (match_operand 2 "" ""))))]
   ""
-  "* return ia64_expand_prediction (insn, \"(%%j0) br.cond.%s %%l2\");"
+  "(%j0) br.cond%+ %l2"
   [(set_attr "type" "B")
    (set_attr "predicable" "no")])
 
@@ -2717,14 +2717,7 @@
 	 (match_operand 1 "" ""))
    (clobber (match_operand:DI 2 "register_operand" "=b"))]
   ""
-  "*
-{
-  operands[3] = current_insn_predicate;
-  if (operands[3] != NULL_RTX)
-    return ia64_expand_prediction (insn, \"(%%J3) br.call.%s.many %2 = %0\");
-  else
-    return \"br.call.sptk.many %2 = %0\";
-}"
+  "br.call%+.many %2 = %0"
   [(set_attr "type" "B")])
 
 (define_insn "*call_internal1"
@@ -2733,14 +2726,7 @@
    (use (reg:DI 1))
    (clobber (match_operand:DI 2 "register_operand" "=b"))]
   ""
-  "*
-{
-  operands[3] = current_insn_predicate;
-  if (operands[3] != NULL_RTX)
-    return ia64_expand_prediction (insn, \"(%%J3) br.call.%s.many %2 = %0\");
-  else
-    return \"br.call.sptk.many %2 = %0\";
-}"
+  "br.call%+.many %2 = %0"
   [(set_attr "type" "B")])
 
 ;; Subroutine call instruction returning a value.  Operand 0 is the hard
@@ -2940,14 +2926,7 @@
 	      (match_operand 2 "" "")))
    (clobber (match_operand:DI 3 "register_operand" "=b"))]
   ""
-  "*
-{
-  operands[4] = current_insn_predicate;
-  if (operands[4] != NULL_RTX)
-    return ia64_expand_prediction (insn, \"(%%J4) br.call.%s.many %3 = %1\");
-  else
-    return \"br.call.sptk.many %3 = %1\";
-}"
+  "br.call%+.many %3 = %1"
   [(set_attr "type" "B")])
 
 (define_insn "*call_value_internal1"
@@ -2957,14 +2936,7 @@
    (use (reg:DI 1))
    (clobber (match_operand:DI 3 "register_operand" "=b"))]
   ""
-  "*
-{
-  operands[4] = current_insn_predicate;
-  if (operands[4] != NULL_RTX)
-    return ia64_expand_prediction (insn, \"(%%J4) br.call.%s.many %3 = %1\");
-  else
-    return \"br.call.sptk.many %3 = %1\";
-}"
+  "br.call%+.many %3 = %1"
   [(set_attr "type" "B")])
 
 (define_insn "*call_multiple_values_internal1"
@@ -2975,14 +2947,7 @@
 		    (use (reg:DI 1))
 		    (clobber (match_operand:DI 4 "register_operand" "=b"))])]
   ""
-  "*
-{
-  operands[5] = current_insn_predicate;
-  if (operands[5] != NULL_RTX)
-    return ia64_expand_prediction (insn, \"(%%J5) br.call.%s.many %4 = %2\");
-  else
-    return \"br.call.sptk.many %4 = %2\";
-}"
+  "br.call%+.many %4 = %2"
   [(set_attr "type" "B")])
 
 ;; Call subroutine returning any type.
@@ -3035,7 +3000,7 @@
 		      (return)
 		      (pc)))]
   "ia64_direct_return ()"
-  "* return ia64_expand_prediction (insn, \"(%%J0) br.ret.%s.many rp\");"
+  "(%%J0) br.ret%+.many rp"
   [(set_attr "type" "B")
    (set_attr "predicable" "no")])
 
@@ -3047,7 +3012,7 @@
 		      (pc)
 		      (return)))]
   "ia64_direct_return ()"
-  "* return ia64_expand_prediction (insn, \"(%%j0) br.ret.%s.many rp\");"
+  "(%%j0) br.ret%+.many rp"
   [(set_attr "type" "B")
    (set_attr "predicable" "no")])
 
