--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2000-05-31  Richard Henderson  <rth@cygnus.com>
 
+	* config/ia64/ia64-protos.h (ia64_expand_prediction): Remove.
+	* config/ia64/ia64.c (ia64_expand_prediction): Move code ...
+	(ia64_print_operand) [+]: ... here.  Use current_output_insn.
+	* config/ia64/ia64.h (PRINT_OPERAND_PUNCT_VALID_P): New.
+	* config/ia64/ia64.md (all branch/call patterns): Use %+.
+
+2000-05-31  Richard Henderson  <rth@cygnus.com>
+
 	* ifcvt.c (cond_exec_process_insns): Don't ever ignore clobbers.
 
 2000-05-31  Richard Henderson  <rth@cygnus.com>
