* cp-tree.h (c_get_alias_set): Deleted. 	* Makefile.in (decl.o): Include ../expr.h. 	* decl.c (expr.h): Include. 	(init_decl_processing): Call record_component_aliases for arrays. 	(grokdeclarator): Likewise. 	Set TREE_ADDRESSABLE for fields that aren't bitfields. 	* tree.c (build_cplus_array_type_1): Call record_component_aliases.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34326 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,6 @@
 Wed May 31 14:09:00 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* cp-tree.h (c_get_alias_set): Deleted.
 	* Makefile.in (decl.o): Include ../expr.h.
 	* decl.c (expr.h): Include.
 	(init_decl_processing): Call record_component_aliases for arrays.
