--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-01  Richard Henderson  <rth@cygnus.com>
+
+	* decl2.c (unsupported_options): Fix typo, make const.
+	(lang_decode_option): Fix bsearch argument order.
+
 2000-06-01  Mark Mitchell  <mark@codesourcery.com>
 
 	* init.c (resolve_offset_ref): Remove check for TREE_ADDRESSABLE
