--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-01  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/tests/base/...: new base result files
+
 Thu Jun  1 09:37:35 2000  Clinton Popetz  <cpopetz@cygnus.com>
 
 	* config/i386/i386.c (ix86_use_fcomi_compare): Make global.
