2000-05-02  Alexandre Petit-Bianco  <apbianco@cygnus.com>
        * parse.y (resolve_field_access): Call the appropriate <clinit>
        before accessing the length of a static array. Craft a decl for
        the field while its time.

(Fixes the PR #129:
 http://sourceware.cygnus.com/ml/java-prs/2000-q1/msg00013.html)


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34340 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -34,6 +34,12 @@
 	`wfl_operator', to maybe_build_primttype_type_ref.
 	Fixes PR gcj/235.
 
+2000-05-02  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* parse.y (resolve_field_access): Call the appropriate <clinit>
+	before accessing the length of a static array. Craft a decl for
+	the field while its time. Fixes PR gcj/129.
+ 
 2000-05-01  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.y (resolve_package): Correctly set `*next' (was off by
