2000-06-01  Zack Weinberg  <zack@wolery.cumb.org>
	* cpplex.c (maybe_macroexpand): Use CPP_WTRADITIONAL.  Improve
	error message.
	* cpplib.c (parse_include): Remove support for VAX-C
	"#include starlet" misfeature.

	* gcc.dg/cpp-tradwarn2.c: Update egrep pattern.

2000-05-31 Laurynas Biveinis <lauras@softhome.net>

	* cppfiles.c: conditionally define O_BINARY.
	(open_include_file): pass O_BINARY to open().


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34344 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2000-06-01  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cpplex.c (maybe_macroexpand): Use CPP_WTRADITIONAL.  Improve
+	error message.
+	* cpplib.c (parse_include): Remove support for VAX-C 
+	"#include starlet" misfeature.
+
+2000-05-31 Laurynas Biveinis <lauras@softhome.net>
+
+	* cppfiles.c: conditionally define O_BINARY.
+	(open_include_file): pass O_BINARY to open().
+
 2000-06-01  Richard Henderson  <rth@cygnus.com>
 
 	* i960.c (i960_br_predict_opcode): Remove.
