--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-01  Stan Cox  <scox@cygnus.com>
+
+	* varray.h (VARRAY_PUSH_GENERIC_PTR, VARRAY_PUSH_CHAR_PTR): Fix
+	macro argument typo.
+
 2000-06-01  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpplex.c (maybe_macroexpand): Use CPP_WTRADITIONAL.  Improve
