2000-05-23  Bryce McKinlay  <bryce@albatross.co.nz>
       * parse.y (patch_method_invocation): Don't try to lookup methods
       in primitive types.

(This fixes the PR gcj/127:
 http://sourceware.cygnus.com/ml/java-prs/2000-q1/msg00011.html)


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34347 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -34,6 +34,11 @@
 	`wfl_operator', to maybe_build_primttype_type_ref.
 	Fixes PR gcj/235.
 
+2000-05-23  Bryce McKinlay  <bryce@albatross.co.nz>
+
+       * parse.y (patch_method_invocation): Don't try to lookup methods
+       in primitive types.
+
 2000-05-02  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.y (resolve_field_access): Call the appropriate <clinit>
