* sh.md (untyped_call): Remove excess parameters
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34348 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-02  Toshiyasu Morita  <toshi.morita@sega.com>
+
+	* sh.md (untyped_call): Remove excess parameters
+
 2000-06-01  Stan Cox  <scox@cygnus.com>
 
 	* varray.h (VARRAY_PUSH_GENERIC_PTR, VARRAY_PUSH_CHAR_PTR): Fix
