* cp-tree.h (lang_decl_flags): Add anticipated_p. 	(DECL_ANTICIPATED): Use it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34351 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-01  Mark Mitchell  <mark@codesourcery.com>
+
+	* cp-tree.h (lang_decl_flags): Add anticipated_p.
+	(DECL_ANTICIPATED): Use it.
+
 2000-06-01  Richard Henderson  <rth@cygnus.com>
 
 	* decl.c (init_decl_processing): Set lang_get_alias_set first thing.
