--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-02  Jason Merrill  <jason@casey.soma.redhat.com>
+
+	* decl.c (store_return_init): Call put_var_into_stack.
+
 2000-06-01  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (lang_decl_flags): Add anticipated_p.
