--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-02  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/noreturn-1.c (foo7, foo8): Revert previous change.
+	* gcc.dg/noreturn-2.c (noreturn): Likewise.
+
 2000-06-01  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/compare2.c (case 12): XFAIL.
