--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+Fri Jun  2 19:38:57 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* cp-tree.h: Use struct tree_common instead of a char array.
+	* decl.c (grokdeclarator): Set DECL_NONADDRESSABLE_P instead
+	of TREE_ADDRESSABLE.
+
 2000-06-02  Richard Henderson  <rth@cygnus.com>
 
 	* decl.c (init_decl_processing): Don't set lang_get_alias_set.
